# linux-wallpaperengine-player

./: .gitignore  Cargo.toml  README.md  check.sh  config.conf  config.ini  config.json  config.toml  helper.py  linux_wallpaperengine.py  load_wallpaper.sh  map.py  map.sh  monitor.py  play.py  play.sh  player.py  player.sh  pyrightconfig.json  妹子.txt  妹子.txt_checked  学习资料.txt  手机.txt  风景.txt
documents/: design.puml  discussion.md
py/: check.py  config.ini  linux_wallpaperengine.py  play.py  player.py
src/: helper.py  main.rs  util.rs
src/player/: check.rs  control.rs  linux_wallpaperengine.rs  mod.rs  play.rs  sddm.rs  wallock.rs  wallpaper.rs  wallpaperengine.rs  watch.rs
src/player/config/: app_config.rs  mod.rs  played_history.rs  wallpaperengine_config.rs
util/src/: lib.rs
