[package]
name = "linux-wallpaperengine-player"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5"
config = "0.14.1"
toml = "0.8.19"
fern = "0.7.0"
nix = "0.29.0"
notify = "7.0.0"
